bml/test/syntax-errors/no-close.correct
Tag vs Tga:
[Error: <b>BML block 'TAG' has no close</b>]